tests/expectations/compiler/tuple/tuple_in_struct_fail.out
Error [ETYC0372050]: A struct cannot contain a tuple.
    --> compiler-test:5:5
     |
   5 |     mem: (u8, u16)
     |     ^^^
Error [ETYC0372050]: A struct cannot contain a tuple.
    --> compiler-test:9:5
     |
   9 |     mems: (A, A)
     |     ^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {}
     |         ^^^^^^^^^
